space soc media icons, but still spacing issues

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -219,8 +219,17 @@ input[type=submit]:hover {
   border: 2px solid black;
   padding: 6px 6px;
   margin: 0 0 30px;
-  color: #000;
   display: flex;
+}
+
+.fab {
+  padding: 20px;
+  font-size: 40px;
+  width: 150px;
+  text-align: center;
+  text-decoration: none;
+  justify-content: space-evenly;
+  color:black;
 }
 
 .social {
@@ -233,7 +242,7 @@ input[type=submit]:hover {
 }
 
 
-.footer .social a:hover {
+ .fab a:hover {
   color:aqua;
 }
 
